# hraytracer

./: .gitignore  Color.hs  Intersectable.hs  Intersection.hs  LICENSE  Material.hs  Matrix34.hs  Object.hs  Primitive.hs  README.md  Ray.hs  Scene.hs  Shade.hs  Vector3.hs  Vertex.hs  hraytracer.cabal  stack.yaml
app/: Main.hs
src/: Camera.hs  Color.hs  Image.hs  Intersectable.hs  Intersection.hs  Light.hs  Matrix34.hs  Object.hs  Primitive.hs  Raytracer.hs  Scene.hs  Shade.hs  Util.hs  Vector3.hs
